fixed issue that dropdown was shifted after adding new content on top of that

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,11 @@
 *{
     box-sizing: border-box;
 }
+
+body{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+}
