--- a/src/styles/dropdown.module.css
+++ b/src/styles/dropdown.module.css
@@ -16,6 +16,7 @@
     justify-content: center;
     align-items: center;
     flex-shrink: 0;
+    position: relative;
 
 }
 
